src/test/deca/context/invalid/created/decl_var/decl_bool_eq_int.deca
// Description :
//    test affectation incorrect bool = int
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 9: Types incompatibles pour l’affectation

{
boolean a = 1; //10 n'est pas un bool
}